<html>
<head><style type="text/css">body {font-size: smaller;}</style></head>
<body>
  <b>3.6.1</b>
  <ul>
    <li>Fixed a bux introduced in 3.6.0 that prevented the import of sudokus in sdm format.</li>
  </ul>
  <b>3.6.0</b>
  <ul>
    <li>Fix import and export of sudokus in Android 11. Thanks @autinerd!</li>
  </ul>
  <b>3.5.1</b>
  <ul>
    <li>Fixed a crash when import sudokus on Android 10 or higher.</li>
    <li>Basque translation updated. Thanks @Porrumentzio!</li>
    <li>German translation updated. Thanks @cyclingcat!</li>
  </ul>
  <b>3.5.0</b>
  <ul>
    <li>Prevent use undo once the game is finish.</li>
    <li>Show the resume button on the title screen only if you can resume a game.</li>
    <li>Code cleanup, update and convert drawables to vectors. Thanks @TacoTheDank!</li>
    <li>Added basque language. Thanks @Porrumentzio!</li>
    <li>French translation updated. Thanks @guy-teube!</li>
    <li>Chinese translation updated. Thanks @kevinshq!</li>
  </ul>
  <b>3.4.1</b>
  <ul>
    <li>Improved SDM importer to support files with dots instead of zeros.</li>
    <li>If a digit is not present in the board, clear selection and highlight notes (if any).</li>
    <li>French translation updated. Thanks @Tubix!</li>
    <li>German translation updated. Thanks @cweiske!</li>
  </ul>
  <b>3.4.0</b>
  <ul>
    <li>New menu option to sort puzzles by last played and play time. Thanks @fuentesj11!</li>
  </ul>
  <b>3.3.1</b>
  <ul>
    <li>Fix crash when using the new feature to automatically remove cell notes. Thanks @jlnordin!</li>
  </ul>
  <b>3.3.0</b>
  <ul>
    <li>Adds a new config option to skip titlescreen.</li>
    <li>Fix folder view to show sudoku previews with custom theme colors.</li>
    <li>Fix the crash when no cell was selected and you used the "hint" command.</li>
    <li>Thanks @jlnordin for all new features!</li>
  </ul>
  <b>3.2.0</b>
  <ul>
    <li>Adds a new config option to remove notes on number entry. Thanks @jlnordin!</li>
  </ul>