@@ -335,4 +335,11 @@
     <string name="sort_creation_date">Fecha de creación</string>
     <string name="sort_play_time">Tiempo de juego</string>
     <string name="sort_last_played">Último jugado</string>
+
+    <!-- Strings added/changed in 3.7.0 -->
+    <string name="pasted_from_clipboard">Pegado del portapapeles</string>
+    <string name="copied_to_clipboard">Copiado al portapapeles</string>
+
+    <string name="invalid_puzzle_format">Formato de puzzle no válido</string>
+    <string name="invalid_mime_type">Tipo MIME no válido, comprueba el contenido del portapapeles</string>
 </resources>
