@@ -382,6 +382,7 @@
     <string name="sort_play_time">Play time</string>
     <string name="sort_last_played">Last played</string>
 
+    <!-- Strings added/changed in 3.7.0 -->
     <string name="pasted_from_clipboard">Pasted from clipboard</string>
     <string name="copied_to_clipboard">Copied to clipboard</string>
 
